sec fixes
