# docs/swagger.json
@@ -4457,6 +4457,9 @@
                 "structured_data": {
                     "type": "object"
                 },
+                "sync_status": {
+                    "$ref": "#/definitions/domain.DocumentSyncStatus"
+                },
                 "tenant_id": {
                     "type": "string"
                 },
@@ -4470,6 +4473,21 @@
                     "$ref": "#/definitions/domain.ValidationStatus"
                 }
             }
+        },
+        "domain.DocumentSyncStatus": {
+            "type": "string",
+            "enum": [
+                "not_synced",
+                "pending",
+                "synced",
+                "failed"
+            ],
+            "x-enum-varnames": [
+                "DocumentSyncStatusNone",
+                "DocumentSyncStatusPending",
+                "DocumentSyncStatusSynced",
+                "DocumentSyncStatusFailed"
+            ]
         },
         "domain.DocumentTag": {
             "type": "object",
